fix: Updates tokens, overflow build bug

--- a/src/app-layout/visual-refresh/trigger-button.scss
+++ b/src/app-layout/visual-refresh/trigger-button.scss
@@ -61,6 +61,6 @@ handleSplitPanelMaxWidth function in the context.
     border-radius: 8px;
     top: 0;
     right: 0;
-    background-color: awsui.$color-text-status-error;
+    background-color: awsui.$color-background-notification-red;
   }
 }
