--- a/src/button-dropdown/styles.scss
+++ b/src/button-dropdown/styles.scss
@@ -91,6 +91,6 @@ $dropdown-trigger-icon-offset: 2px;
 
   & > .trigger-active,
   & > .trigger-active:hover {
-    color: awsui.$color-text-layout-toggle-active;
+    color: awsui.$color-text-layout-toggle;
   }
 }
